--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -47,8 +47,21 @@
         \node[anchor=south east] at (\cardwidth, 0) {\scriptsize #1};
 \end{tikzpicture}}
 
-\whitecard{FSK18}{Käse}%
-\whitecard{FSK18}{Eicheln}%
+\whitecard{Basis}{In Flamme stehen.}%
+\whitecard{Basis}{Rassismus.}%
+\whitecard{Basis}{Den Geruch alter Leute}
+\whitecard{Basis}{In Flamme stehen.}%
+\whitecard{Basis}{Rassismus.}%
+\whitecard{FSK16}{Einen Mikropenis}
+\whitecard{Basis}{Frauen in Joghurt Werbespots.}%
+\whitecard{Basis}{Sich einen Scheiss um die dritte Welt scheren.}%
+\whitecard{FSK18}{Ein Einwekcglas in meinen Anus einführen.}
+\whitecard{Basis}{Gerichtlich angeordneter Entzug.}%
+\whitecard{Basis}{Eine Windmühle voller Leichen.}%
+\whitecard{Basis}{Die Schwulen.}
+\whitecard{Basis}{Ein übergroßer Lolli.}%
+\whitecard{Basis}{Afrikanische Kinder.}%
+\whitecard{Basis}{Eine asymmetrische Brustvergößerung.}
 \blackcard{FSK18}{Ich habe \underl nie wirklich verstanden, bis ich auf \underl gestoßen bin.}%
 
 
