--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -55,9 +55,9 @@
 \whitecard{FSK16}{Einen Mikropenis}
 \whitecard{Basis}{Frauen in Joghurt Werbespots.}%
 \whitecard{Basis}{Sich einen Scheiss um die dritte Welt scheren.}%
-\whitecard{FSK18}{Ein Einwekcglas in meinen Anus einführen.}
+\whitecard{FSK18}{Ein Einweckglas in meinen Anus einführen.}
 \whitecard{Basis}{Gerichtlich angeordneter Entzug.}%
-\whitecard{Basis}{Eine Windmühle voller Leichen.}%
+\whitecard{Böse}{Eine Windmühle voller Leichen.}%
 \whitecard{Basis}{Die Schwulen.}
 \whitecard{Basis}{Ein übergroßer Lolli.}%
 \whitecard{Basis}{Afrikanische Kinder.}%
