Added more black cards

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -62,7 +62,39 @@
 \whitecard{Basis}{Ein übergroßer Lolli.}%
 \whitecard{Basis}{Afrikanische Kinder.}%
 \whitecard{Basis}{Eine asymmetrische Brustvergößerung.}
-\blackcard{FSK18}{Ich habe \underl nie wirklich verstanden, bis ich auf \underl gestoßen bin.}%
-
+\blackcard{Basis}{Ich habe \underl nie wirklich verstanden, bis ich auf \underl gestoßen bin.}%
+\blackcard{FSK18}{}%
+\blackcard{Basis}{Was ist die neue Modediät?}%
+\blackcard{Basis}{Was hat nie verfehlt, eine Party zu beleben?}
+\blackcard{Basis}{\underl + \underl = \underl.}%
+\blackcard{Drogen}{Was ist meine Anti-Droge?%
+\blackcard{Basis}{Ja richtig, ich habe \underl getötet. Wie fragst du? \underl.}
+\blackcard{Drogen}{Als einen Acid-trip hatte, \underl wurde zu \underl.}%
+\blackcard{Basis}{Wenn ich ein Milliadär wäre, um wem zu gedenken würde ich eine Statue bauen?}%
+\blackcard{Basis}{Wenn ich König von Deutschland wär, würd ich das \underl Ministerium ins Leben rufen.}
+\blackcard{Basic}{Dreamworks präsentiert "\underl die Geschichte von \underl."}%
+\blackcard{}{}%
+\blackcard{}{}
+\blackcard{}{}%
+\blackcard{}{}%
+\blackcard{}{}
+\blackcard{}{}%
+\blackcard{}{}%
+\blackcard{}{}
+\blackcard{}{}%
+\blackcard{}{}%
+\blackcard{}{}
+\blackcard{}{}%
+\blackcard{}{}%
+\blackcard{}{}
+\blackcard{}{}%
+\blackcard{}{}%
+\blackcard{}{}
+\blackcard{}{}%
+\blackcard{}{}%
+\blackcard{}{}
+\blackcard{}{}%
+\blackcard{}{}%
+\blackcard{}{}
 
 \end{document}
