Fixed bad cards

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -213,12 +213,12 @@
 \whitecard{Basis}{Ein übergroßer Lolli.}
 
 \blackcard{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
-\blackcard{Basis}{Ich habe \underl nie wirklich verstanden, bis ich auf \underl gestoßen bin.}%
+\blackcard{Basis}{}%
 \blackcard{Basis}{Was hat nie verfehlt, eine Party zu beleben?}
 
 \blackcard{Basis}{\underl + \underl = \underl.}%
-\blackcard{Drogen}{Was ist meine Anti-Droge?%
-\blackcard{Basis}{Ja richtig, ich habe \underl getötet. Wie fragst du? \underl.}
+\blackcard{Drogen}{Was ist meine Anti-Droge?}%
+\blackcard{Basis}{Ja richtig, ich habe \underl getötet. Warum fragst du? \underl.}
 
 \blackcard{Drogen}{Als einen Acid-trip hatte, \underl wurde zu \underl.}%
 \blackcard{Basis}{Wenn ich ein Milliadär wäre, um wem zu gedenken würde ich eine Statue bauen?}%
