--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -3,7 +3,7 @@
 \usepackage{tikz}
 %\usepackage{pifont}
 %\usepackage{anttor}
-\usepackage[sfdefault]{ClearSans}
+\usepackage{arev}
 \usepackage[utf8]{inputenc}
 \begin{document}
 \pgfmathsetmacro{\cardwidth}{6.2}
@@ -16,6 +16,7 @@
 \pgfmathsetmacro{\cardsymbolheight}{0.4}
 
 \setlength{\baselineskip}{16pt}
+\def\SymbReg{\textsuperscript{\textregistered}}
 
 \newcommand{\titleleft}{CARDS AGAINST HUMANITY}
 \newcommand{\underl}{\rule{2cm}{.5pt}}
@@ -30,7 +31,7 @@
         \node[fill=white, draw=black, minimum height = \cardsymbolwidth cm, minimum width = \cardsymbolheight cm, anchor=east, rotate=-20] at (4*\stripwidth/5, \stripwidth/2) { } ;
 
         \node[text width=(\cardwidth-\strippadding-\stripwidth-2*\textpadding-0.3)*1cm,below right, anchor=west] at (\strippadding+\stripwidth+\textpadding,\cardheight*1/2-\textpadding) {
-            {\huge #2\par}
+            {\LARGE \raggedright #2\par}
         };
         \node[anchor=south east] at (\cardwidth, 0) {\scriptsize #1};
 \end{tikzpicture}}
@@ -42,27 +43,83 @@
         \node[fill=white, draw=black, minimum height = \cardsymbolwidth cm, minimum width = \cardsymbolheight cm, anchor=east, rotate=-20] at (4*\stripwidth/5, \stripwidth/2) { } ;
 
         \node[text width=(\cardwidth-\strippadding-\stripwidth-2*\textpadding-0.3)*1cm,below right, anchor=west] at (\strippadding+\stripwidth+\textpadding,\cardheight*2/3-\textpadding) {
-            {\huge #2\par}
+            {\LARGE #2\par}
         };
         \node[anchor=south east] at (\cardwidth, 0) {\scriptsize #1};
 \end{tikzpicture}}
 
 \whitecard{Basis}{In Flamme stehen.}%
 \whitecard{Basis}{Rassismus.}%
-\whitecard{Basis}{Den Geruch alter Leute}
-\whitecard{Basis}{In Flamme stehen.}%
+\whitecard{Basis}{Der Geruch alter Leute}
+
 \whitecard{Basis}{Rassismus.}%
-\whitecard{FSK16}{Einen Mikropenis}
-\whitecard{Basis}{Frauen in Joghurt Werbespots.}%
-\whitecard{Basis}{Sich einen Scheiss um die dritte Welt scheren.}%
-\whitecard{FSK18}{Ein Einweckglas in meinen Anus einführen.}
-\whitecard{Basis}{Gerichtlich angeordneter Entzug.}%
+\whitecard{FSK16}{Ein Mikropenis}%
+\whitecard{Basis}{Frauen in Joghurt Werbespots.}
+
+\whitecard{Böse}{Sich einen Scheiss um die dritte Welt zu scheren.}%
+\whitecard{FSK18}{Ein Einweckglas in meinen Anus einführen.}%
+\whitecard{Basis}{Gerichtlich angeordneter Entzug.}
+
 \whitecard{Böse}{Eine Windmühle voller Leichen.}%
-\whitecard{Basis}{Die Schwulen.}
-\whitecard{Basis}{Ein übergroßer Lolli.}%
-\whitecard{Basis}{Afrikanische Kinder.}%
-\whitecard{Basis}{Eine asymmetrische Brustvergößerung.}
-\blackcard{FSK18}{Ich habe \underl nie wirklich verstanden, bis ich auf \underl gestoßen bin.}%
+\whitecard{Basis}{Die Schwulen.}%
+\whitecard{Basis}{Ein übergroßer Lolli.}
+
+\whitecard{Böse}{Afrikanische Kinder.}%
+\whitecard{Basis}{Eine asymmetrische Brust-Vergößerung.}%
+\whitecard{Eklig}{Sich überfressen und dann abführen.}
+
+\whitecard{Basis}{Der hart arbeitende Türke.}%
+\whitecard{Basis}{Ein Ödipuskomplex.}%
+\whitecard{Basis}{Ein kleines Pferd.}
+
+\whitecard{Basis}{Popel.}%
+\whitecard{Basis}{Penis Neid.}%
+\whitecard{Basis}{Angela Merkel.}
+
+\whitecard{Basis}{Barack Obama.}%
+\whitecard{Basis}{Meine Warzen.}%
+\whitecard{Basis}{Das schwedische Tempur-Pedic\SymbReg \newline  Schlafsystem.}
+
+\whitecard{Basis}{Scientology.}%
+\whitecard{Basis}{Würgen.}%
+\whitecard{Basis}{Darth Vader.}
+
+\whitecard{Basis}{Feigenpudding.}%
+\whitecard{Basis}{Ein Ratschlag von einem weisen, alten Mann.}%
+\whitecard{Basis}{5 Euro Subway Footlongs.}
+
+\whitecard{Basis}{Betagte japanische Männer.}%
+\whitecard{Basis}{Kostenlose Proben.}%
+\whitecard{Basis}{Östrogen.}
+
+\whitecard{FSK16}{Sexuelle Spannungen.}%
+\whitecard{Böse}{Hungersnot.}%
+\whitecard{Basis}{Ein verirrtes Schamhaar.}
+
+\whitecard{Basis}{Männer.}%
+\whitecard{Basis}{Herzerweichende Weisenkinder.}%
+\whitecard{Böse}{Teile eines toten Anhalters.}
+
+\whitecard{Basis}{Eine Tasche voller magischer Bohnen.}%
+\whitecard{Basis}{Unterdrückung.}%
+\whitecard{Basis}{Tänzeln.}
+
+\whitecard{Basis}{Mein Beziehungsstatus.}%
+\whitecard{Basis}{Überkompensation.}%
+\whitecard{Eklig}{Ein bisschen zu pinkeln.}
+
+\whitecard{Eklig}{Vorne und hinten Scheissen. Für immer.}%
+\whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Samen und Fussnägeln.}%
+\whitecard{FSK16}{Testikuläre Verdrehung.}
+
+\whitecard{Basis}{Der Teufel höchst selbst.}%
+\whitecard{Basis}{The World of Warcraft.}%
+\whitecard{Böse}{Robo-Hitler.}
+
+\whitecard{Basis}{Einfach großartig zu sein.}%
+\whitecard{Basis}{Bilder von Brüsten.}%
+
+\blackcard{FSK18}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
 
 
 \end{document}
