--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -118,8 +118,97 @@
 
 \whitecard{Basis}{Einfach großartig zu sein.}%
 \whitecard{Basis}{Bilder von Brüsten.}%
+\whitecard{FSK16}{Ein sanftes Liebkosen der Oberschenkel.}
 
-\blackcard{FSK18}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
+\whitecard{Basis}{Die Amischen.}%
+\whitecard{Basis}{Der Rhythmus Afrikas.}%
+\whitecard{FSK16}{Lance Armstrongs fehlender Hoden.}
+
+\whitecard{Böse}{Pedophile.}%
+\whitecard{Basis}{Der Papst.}%
+\whitecard{FSK16}{Fliegende Sex-Schlangen.}
+
+\whitecard{FSK16}{Erotische Kissenschlachten.}%
+\whitecard{Basis}{In Polen einmarschieren.}%
+\whitecard{Basis}{Kybernetische Verbesserungen.}
+
+\whitecard{Böse}{Verluste von Zivilisten.}%
+\whitecard{Basis}{Arbeitsplätze.}%
+\whitecard{FSK16}{Der weibliche Orgasmus.}
+
+\whitecard{Basis}{Schlampen.}%
+\whitecard{Basis}{Die Pfadfinder.}%
+\whitecard{Böse}{Auschwitz.}
+
+\whitecard{Basis}{Fingerfarben.}%
+\whitecard{Basis}{Der Erklär-Bär-Blick.}%
+\whitecard{Böse}{Die Juden.}
+
+\whitecard{Basis}{Marginalisiert zu werden.}%
+\whitecard{Basis}{Das Blut von Jesus Christus.}%
+\whitecard{Böse}{Tote Eltern.}
+
+\whitecard{Basis}{Die Kunst der Verführung.}%
+\whitecard{Basis}{An Dysentery sterben.}%
+\whitecard{Basis}{Meister Proper Sauberkraft.}
+
+\whitecard{Basis}{Ackerbau.}%
+\whitecard{Basis}{Richterin Barbara Salesch.}%
+\whitecard{FSK16}{Überraschungs Sex!}
+
+\whitecard{Basis}{Der homosexuelle Lebensstil.}%
+\whitecard{Basis}{Die Spur aus Tränen}%
+\whitecard{Basis}{Funkig-Frische Rhythmen.}
+
+\whitecard{Basis}{Das Licht einer Milliarde Sonnen.}%
+\whitecard{Böse}{Menschen mit Amputationen.}%
+\whitecard{Basis}{Eine Jungfrau in einen Vulkan zu werfen.}
+
+\whitecard{Basis}{Italiener.}%
+\whitecard{Basis}{Explosionen.}%
+\whitecard{Basis}{Einmal richtig dran Schnuppern.}
+
+\whitecard{Basis}{Die Beweise vernichten.}%
+\whitecard{Basis}{Kinder an Leinen.}%
+\whitecard{Basis}{Katapulte}
+
+\whitecard{Basis}{Eine Billion Euro.}%
+\whitecard{Basis}{Freunde mit gewissen Vorzügen.}%
+\whitecard{Basis}{Sterben.}
+
+\whitecard{Basis}{Stille.}%
+\whitecard{Basis}{Sich ein paar Eier wachsen zu lassen.}%
+\whitecard{Basis}{DU MUSST WEITERE MASTEN KONSTRUIEREN.}
+
+\whitecard{Basis}{Justin Bieber.}%
+\whitecard{Basis}{Die Bibel.}%
+\whitecard{Basis}{Eier.}
+
+\whitecard{Basis}{Für das Verschwinden der Schwulen zu beten.}%
+\whitecard{Basis}{Teenager Schwangerschaft.}%
+\whitecard{FSK18}{Deutsche Sado-Maso-Pornos.}
+
+\whitecard{Basis}{Die unsichtbare Hand.}%
+\whitecard{Basis}{Meine inneren Dämonen.}%
+\whitecard{Basis}{Kräftige Oberschenkel.}
+
+\whitecard{FSK16}{Sich nackt ausziehen und Kika gucken.}%
+\whitecard{Basis}{Erdrückende Schulden.}%
+\whitecard{Basis}{Kamikaze-Kissen.}
+
+\whitecard{Basis}{Einem Roboter beibringen, zu lieben.}%
+\whitecard{Basis}{Polizeigewalt.}%
+\whitecard{Basis}{Pferdefleisch.}
+
+\whitecard{Basis}{All-you-can-eat Shrimps für 4,99 Euro.}%
+\whitecard{Basis}{Heteronormativität.}%
+\whitecard{Basis}{Michael Jackson.}
+
+\whitecard{Basis}{Ein wirklich cooler Hut.}%
+\whitecard{Basis}{Von einem Gefühlt erwischt zu werden}%
+\whitecard{Basis}{}
+
+\blackcard{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
 
 
 \end{document}
