More white cards.

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -205,8 +205,28 @@
 \whitecard{Basis}{Michael Jackson.}
 
 \whitecard{Basis}{Ein wirklich cooler Hut.}%
-\whitecard{Basis}{Von einem Gefühlt erwischt zu werden}%
-\whitecard{Basis}{}
+\whitecard{Basis}{Von einem Gefühlt erwischt zu werden.}%
+\whitecard{Basis}{Crystal Meth.}
+
+\whitecard{Basis}{Formwandler.}%
+\whitecard{FSK18}{Fingern.}%
+\whitecard{Basis}{Eine enttäuschende Geburtstagsparty.}
+
+\whitecard{Basis}{Das Patriarchat.}%
+\whitecard{Basis}{Meine Seele.}%
+\whitecard{Basis}{Ein Würstchen-Fest.}
+
+\whitecard{Basis}{Die Chronik.}%
+\whitecard{Böse}{Rassenhygiene.}%
+\whitecard{Basis}{Management-Lösungen mit Synergie-Effekt.}
+
+\whitecard{Basis}{RoboCop.}%
+\whitecard{Basis}{Sklaverei.}%
+\whitecard{FSK16}{Stephen Hawkings Sexgespräche.}
+
+\whitecard{FSK16}{Ein Mann am Rande des Orgasmus.}%
+\whitecard{Eklig}{Brennende Schisse.}%
+\whitecard{Basis}{Öffentliches Verspotten.}
 
 \blackcard{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
 
