Adden more black cards

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -213,12 +213,12 @@
 \whitecard{Basis}{Ein übergroßer Lolli.}
 
 \blackcard{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
-\blackcard{Basis}{}%
+\blackcard{Basis}{Warum tut mir alles weh?}%
 \blackcard{Basis}{Was hat nie verfehlt, eine Party zu beleben?}
 
 \blackcard{Basis}{\underl + \underl = \underl.}%
 \blackcard{Drogen}{Was ist meine Anti-Droge?}%
-\blackcard{Basis}{Ja richtig, ich habe \underl getötet. Warum fragst du? \underl.}
+\blackcard{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie? \underl.}
 
 \blackcard{Drogen}{Als einen Acid-trip hatte, \underl wurde zu \underl.}%
 \blackcard{Basis}{Wenn ich ein Milliadär wäre, um wem zu gedenken würde ich eine Statue bauen?}%
@@ -226,6 +226,10 @@
 
 \blackcard{Basic}{Dreamworks präsentiert "\underl die Geschichte von \underl."}%
 \blackcard{Basis}{Was ist die neue Modediät?}%
-\blackcard{Basis}{}%
+\blackcard{Basis}{Das Naturkundemuseum stellt jetzt auch \underl aus.}
+
+\blackcard{FSK18}{Fun Tip! Wenn dein Mann dich um einen Blowjob bittet, überrasche ihn stattdessen mit \underl.}%
+\blackcard{Basis}{Was denkt Angela Merkel gerade?}%
+\blackcard{Basis}{Auf was verzichtest du in der Fastenzeit?}
 
 \end{document}
