More white cards. Stopped at page 12, "Incest" of http://s3.amazonaws.com/cah/CAH_MainGame.pdf

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -232,6 +232,54 @@
 \whitecard{Eklig}{Brennende Schisse.}%
 \whitecard{Basis}{Öffentliches Verspotten.}
 
+\whitecard{Böse}{Die skalpierte Haut von weißen Männern.}%
+\whitecard{Basis}{Die krankhaft fettleibigen.}%
+\whitecard{Basis}{Activia.}
+
+\whitecard{Böse}{Die skalpierte Haut von weißen Männern.}%
+\whitecard{Basis}{Die krankhaft fettleibigen.}%
+\whitecard{Basis}{Activia\SymbReg.}
+
+\whitecard{Basis}{Kiefersperre}%
+\whitecard{Basis}{Genetisch manipulierte Kampf-Schildkröten mit Säure-Atem.}%
+\whitecard{FSK16}{Feuchte Träume.}
+
+\whitecard{Basis}{Hip-Hop Juwelen.}%
+\whitecard{FSK18}{Ein Gewehr in die Luft abfeuern mit den Eiern tief in einer kreischenden Sau.}%
+\whitecard{FSK18}{Panda Sex.}
+
+\whitecard{Böse}{Nekrohpilie.}%
+\whitecard{Basis}{Grabrauben.}%
+\whitecard{FSK16}{Ein gebleichtes Arschloch.}
+
+\whitecard{Basis}{Mohammed (Geheiligt sei sein Name).}%
+\whitecard{Basis}{Mehrfache Stichwunden.}%
+\whitecard{FSK16}{Daniel Radcliffes appetitliches Arschloch.}
+
+\whitecard{Basis}{Ein rauchender Affe.}%
+\whitecard{Eklig}{Smegma.}%
+\whitecard{Basis}{Ein Live-Studio Publikum.}
+
+\whitecard{Basis}{Einen Schmollmund machen.}%
+\whitecard{Basis}{Das Verletzen unserer grundlegensten Menschenrechte.}%
+\whitecard{Basis}{Unerfassbare Blödheit.}
+
+\whitecard{Basis}{Sonnenschein und Regenbogen.}%
+\whitecard{FSK16}{Ihn rausholen.}%
+\whitecard{Basis}{Die Terroristen.}
+
+\whitecard{FSK18}{Eine Schildkröte, die dir in die Spitze deines Penis beisst.}%
+\whitecard{Böse}{Massenmord.}%
+\whitecard{Basis}{Die Eurokrise.}
+
+\whitecard{Basis}{Emotionen}%
+\whitecard{FSK16}{So wütend werden, dass du eine Erektion bekommst.}%
+\whitecard{Basis}{Gleichgeschlechtlicher Eiskunstlauf.}
+
+\whitecard{Basis}{Ein M16 Sturmgewehr.}%
+\whitecard{Böse}{Menschenfleisch}%
+\whitecard{FSK18}{Inzest.} 
+
 \blackcard{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
 \blackcard{Basis}{}%
 \blackcard{Basis}{Was hat nie verfehlt, eine Party zu beleben?}
