--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -4,6 +4,7 @@
 %\usepackage{pifont}
 %\usepackage{anttor}
 \usepackage{arev}
+\usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
 \begin{document}
 \pgfmathsetmacro{\cardwidth}{6.2}
@@ -31,7 +32,7 @@
         \node[fill=white, draw=black, minimum height = \cardsymbolwidth cm, minimum width = \cardsymbolheight cm, anchor=east, rotate=-20] at (4*\stripwidth/5, \stripwidth/2) { } ;
 
         \node[text width=(\cardwidth-\strippadding-\stripwidth-2*\textpadding-0.3)*1cm,below right, anchor=west] at (\strippadding+\stripwidth+\textpadding,\cardheight*1/2-\textpadding) {
-            {\LARGE \raggedright #2\par}
+            {\LARGE #2\par}
         };
         \node[anchor=south east] at (\cardwidth, 0) {\scriptsize #1};
 \end{tikzpicture}}
@@ -48,95 +49,91 @@
         \node[anchor=south east] at (\cardwidth, 0) {\scriptsize #1};
 \end{tikzpicture}}
 
-\whitecard{Basis}{In Flamme stehen.}%
+\whitecard{Basis}{In Flammen \newline stehen.}%
 \whitecard{Basis}{Rassismus.}%
-\whitecard{Basis}{Der Geruch alter Leute}
+\whitecard{Basis}{Der Geruch alter Leute.}
 
 \whitecard{Basis}{Rassismus.}%
-\whitecard{FSK16}{Ein Mikropenis}%
-\whitecard{Basis}{Frauen in Joghurt Werbespots.}
+\whitecard{FSK16}{Ein Mikropenis.}%
+\whitecard{Basis}{Frauen in Joghurt-Werbespots.}
 
-\whitecard{Böse}{Sich einen Scheiss um die dritte Welt zu scheren.}%
-\whitecard{FSK18}{Ein Einweckglas in meinen Anus einführen.}%
-\whitecard{Basis}{Gerichtlich angeordneter Entzug.}
+\whitecard{Böse}{Sich einen Dreck um die dritte Welt zu scheren.}%
+\whitecard{FSK18}{Sich ein Einweckglas in den Anus einführen.}%
+\whitecard{Basis}{Gerichtlich\newline angeordneter \newline Entzug.}
 
 \whitecard{Böse}{Eine Windmühle voller Leichen.}%
 \whitecard{Basis}{Ein übergroßer Lolli.}%
-\whitecard{Basis}{Die Schwulen.}
-
-\whitecard{Basis}{Afrikanische Kinder.}%
-\whitecard{Basis}{Die Schwulen.}%
-\whitecard{Basis}{Eine asymmetrische Brustvergößerung.}
+\whitecard{Basis}{Schwule.}
 
 \whitecard{Böse}{Afrikanische Kinder.}%
-\whitecard{Basis}{Eine asymmetrische Brust-Vergößerung.}%
-\whitecard{Eklig}{Sich überfressen und dann abführen.}
+\whitecard{Basis}{Eine\newline asymmetrische Brust-Vergößerung.}%
+\whitecard{Eklig}{Sich\newline überfressen und dann abführen.}
 
-\whitecard{Basis}{Der hart arbeitende Türke.}%
-\whitecard{Basis}{Ein Ödipuskomplex.}%
+\whitecard{Basis}{Der hart\newline arbeitende Türke.}%
+\whitecard{Basis}{Ödipuskomplex.}%
 \whitecard{Basis}{Ein kleines Pferd.}
 
 \whitecard{Basis}{Popel.}%
-\whitecard{Basis}{Penis Neid.}%
+\whitecard{Basis}{Penis-Neid.}%
 \whitecard{Basis}{Angela Merkel.}
 
 \whitecard{Basis}{Barack Obama.}%
 \whitecard{Basis}{Meine Warzen.}%
-\whitecard{Basis}{Das schwedische Tempur-Pedic\SymbReg \newline  Schlafsystem.}
+\whitecard{Basis}{Das\newline schwedische\newline Tempur-Pedic\SymbReg \newline  Schlafsystem.}
 
 \whitecard{Basis}{Scientology.}%
 \whitecard{Basis}{Würgen.}%
 \whitecard{Basis}{Darth Vader.}
 
 \whitecard{Basis}{Feigenpudding.}%
-\whitecard{Basis}{Ein Ratschlag von einem weisen, alten Mann.}%
+\whitecard{Basis}{Ein Ratschlag von einem weisen alten Mann.}%
 \whitecard{Basis}{5 Euro Subway Footlongs.}
 
-\whitecard{Basis}{Betagte japanische Männer.}%
+\whitecard{Basis}{Betagte\newline japanische\newline Männer.}%
 \whitecard{Basis}{Kostenlose Proben.}%
 \whitecard{Basis}{Östrogen.}
 
-\whitecard{FSK16}{Sexuelle Spannungen.}%
+\whitecard{FSK16}{Sexuelle\newline Spannungen.}%
 \whitecard{Böse}{Hungersnot.}%
 \whitecard{Basis}{Ein verirrtes Schamhaar.}
 
 \whitecard{Basis}{Männer.}%
-\whitecard{Basis}{Herzerweichende Weisenkinder.}%
+\whitecard{Basis}{Herz-\newline erweichende\newline Weisenkinder.}%
 \whitecard{Böse}{Teile eines toten Anhalters.}
 
-\whitecard{Basis}{Eine Tasche voller magischer Bohnen.}%
+\whitecard{Basis}{Ein Sack voller magischer Bohnen.}%
 \whitecard{Basis}{Unterdrückung.}%
 \whitecard{Basis}{Tänzeln.}
 
-\whitecard{Basis}{Mein Beziehungsstatus.}%
-\whitecard{Basis}{Überkompensation.}%
-\whitecard{Eklig}{Ein bisschen zu pinkeln.}
+\whitecard{Basis}{Mein Beziehungs-\newline status.}%
+\whitecard{Basis}{Überkompen-\newline sation.}%
+\whitecard{Eklig}{Ein bisschen pinkeln.}
 
-\whitecard{Eklig}{Vorne und hinten Scheissen. Für immer.}%
+\whitecard{Eklig}{Durchfall.\newline Für immer.}%
 \whitecard{Eklig}{Ein Ball aus Ohrenschmalz, Samen und Fussnägeln.}%
-\whitecard{FSK16}{Testikuläre Verdrehung.}
+\whitecard{FSK16}{Testikuläre\newline Verdrehung.}
 
 \whitecard{Basis}{Der Teufel höchst selbst.}%
 \whitecard{Basis}{The World of Warcraft.}%
 \whitecard{Böse}{Robo-Hitler.}
 
-\whitecard{Basis}{Einfach großartig zu sein.}%
+\whitecard{Basis}{Einfach\newline großartig\newline sein.}%
 \whitecard{Basis}{Bilder von Brüsten.}%
-\whitecard{FSK16}{Ein sanftes Liebkosen der Oberschenkel.}
+\whitecard{FSK16}{Sanftes Liebkosen der Oberschenkel.}
 
-\whitecard{Basis}{Die Amischen.}%
+\whitecard{Basis}{Die Amisch.}%
 \whitecard{Basis}{Der Rhythmus Afrikas.}%
-\whitecard{FSK16}{Lance Armstrongs fehlender Hoden.}
+\whitecard{FSK16}{Lance\newline Armstrongs\newline fehlender\newline Hoden.}
 
 \whitecard{Böse}{Pedophile.}%
 \whitecard{Basis}{Der Papst.}%
 \whitecard{FSK16}{Fliegende Sex-Schlangen.}
 
-\whitecard{FSK16}{Erotische Kissenschlachten.}%
+\whitecard{FSK16}{Erotische Kissen-\newline schlachten.}%
 \whitecard{Basis}{In Polen einmarschieren.}%
 \whitecard{Basis}{Kybernetische Verbesserungen.}
 
-\whitecard{Böse}{Verluste von Zivilisten.}%
+\whitecard{Böse}{Verlust von Zivilisten.}%
 \whitecard{Basis}{Arbeitsplätze.}%
 \whitecard{FSK16}{Der weibliche Orgasmus.}
 
@@ -145,58 +142,58 @@
 \whitecard{Böse}{Auschwitz.}
 
 \whitecard{Basis}{Fingerfarben.}%
-\whitecard{Basis}{Der Erklär-Bär-Blick.}%
+\whitecard{Basis}{Der\newline Erklär-Bär-Blick.}%
 \whitecard{Böse}{Die Juden.}
 
-\whitecard{Basis}{Marginalisiert zu werden.}%
-\whitecard{Basis}{Das Blut von Jesus Christus.}%
+\whitecard{Basis}{Marginalisiert werden.}%
+\whitecard{Basis}{Das Blut von\newline Jesus Christus.}%
 \whitecard{Böse}{Tote Eltern.}
 
 \whitecard{Basis}{Die Kunst der Verführung.}%
-\whitecard{Basis}{An Dysentery sterben.}%
+\whitecard{Basis}{An Dünnschiss sterben.}%
 \whitecard{Basis}{Meister Proper Sauberkraft.}
 
 \whitecard{Basis}{Ackerbau.}%
 \whitecard{Basis}{Richterin Barbara Salesch.}%
 \whitecard{FSK16}{Überraschungs Sex!}
 
-\whitecard{Basis}{Der homosexuelle Lebensstil.}%
-\whitecard{Basis}{Die Spur aus Tränen}%
-\whitecard{Basis}{Funkig-Frische Rhythmen.}
+\whitecard{Basis}{Homosexueller\newline Lebensstil.}%
+\whitecard{Basis}{Eine Spur aus\newline Tränen}%
+\whitecard{Basis}{Funkig-frische Rhythmen.}
 
-\whitecard{Basis}{Das Licht einer Milliarde Sonnen.}%
+\whitecard{Basis}{Das Licht einer Milliarde\newline Sonnen.}%
 \whitecard{Böse}{Menschen mit Amputationen.}%
-\whitecard{Basis}{Eine Jungfrau in einen Vulkan zu werfen.}
+\whitecard{Basis}{Eine Jungfrau in einen Vulkan werfen.}
 
 \whitecard{Basis}{Italiener.}%
 \whitecard{Basis}{Explosionen.}%
-\whitecard{Basis}{Einmal richtig dran Schnuppern.}
+\whitecard{Basis}{Einmal richtig dran\newline schnuppern.}
 
-\whitecard{Basis}{Die Beweise vernichten.}%
-\whitecard{Basis}{Kinder an Leinen.}%
-\whitecard{Basis}{Katapulte}
+\whitecard{Basis}{Beweise\newline vernichten.}%
+\whitecard{Basis}{Kinder an\newline Leinen.}%
+\whitecard{Basis}{Katapulte.}
 
-\whitecard{Basis}{Eine Billion Euro.}%
-\whitecard{Basis}{Freunde mit gewissen Vorzügen.}%
+\whitecard{Basis}{Eine Billiarde Euro.}%
+\whitecard{Basis}{Freunde mit\newline gewissen\newline Vorzügen.}%
 \whitecard{Basis}{Sterben.}
 
 \whitecard{Basis}{Stille.}%
-\whitecard{Basis}{Sich ein paar Eier wachsen zu lassen.}%
-\whitecard{Basis}{DU MUSST WEITERE MASTEN KONSTRUIEREN.}
+\whitecard{Basis}{Sich ein paar\newline Eier wachsen lassen.}%
+\whitecard{Basis}{DU MUSST\newline WEITERE\newline MASTEN\newline KONSTRUIEREN.}
 
 \whitecard{Basis}{Justin Bieber.}%
 \whitecard{Basis}{Die Bibel.}%
 \whitecard{Basis}{Eier.}
 
-\whitecard{Basis}{Für das Verschwinden der Schwulen zu beten.}%
+\whitecard{Basis}{Für das\newline Verschwinden\newline von Schwulen\newline beten.}%
 \whitecard{Basis}{Teenager Schwangerschaft.}%
-\whitecard{FSK18}{Deutsche Sado-Maso-Pornos.}
+\whitecard{FSK18}{Deutsche \newline Sado-Maso-\newline Pornos.}
 
 \whitecard{Basis}{Die unsichtbare Hand.}%
 \whitecard{Basis}{Meine inneren Dämonen.}%
-\whitecard{Basis}{Kräftige Oberschenkel.}
+\whitecard{Basis}{Kräftige\newline Oberschenkel.}
 
-\whitecard{FSK16}{Sich nackt ausziehen und Kika gucken.}%
+\whitecard{FSK16}{Sich nackt\newline ausziehen und\newline Kika gucken.}%
 \whitecard{Basis}{Erdrückende Schulden.}%
 \whitecard{Basis}{Kamikaze-Kissen.}
 
@@ -205,47 +202,43 @@
 \whitecard{Basis}{Pferdefleisch.}
 
 \whitecard{Basis}{All-you-can-eat Shrimps für 4,99 Euro.}%
-\whitecard{Basis}{Heteronormativität.}%
+\whitecard{Basis}{Hetero-\newline normativität.}%
 \whitecard{Basis}{Michael Jackson.}
 
-\whitecard{Basis}{Ein wirklich cooler Hut.}%
-\whitecard{Basis}{Von einem Gefühlt erwischt zu werden.}%
+\whitecard{Basis}{Ein wirklich\newline cooler Hut.}%
+\whitecard{Basis}{Von einem\newline Gefühl erwischt werden.}%
 \whitecard{Basis}{Crystal Meth.}
 
-\whitecard{Basis}{Formwandler.}%
+\whitecard{Basis}{Gestaltwandler.}%
 \whitecard{FSK18}{Fingern.}%
-\whitecard{Basis}{Eine enttäuschende Geburtstagsparty.}
+\whitecard{Basis}{Eine\newline enttäuschende Geburtstags-\newline party.}
 
 \whitecard{Basis}{Das Patriarchat.}%
 \whitecard{Basis}{Meine Seele.}%
 \whitecard{Basis}{Ein Würstchen-Fest.}
 
-\whitecard{Basis}{Die Chronik.}%
+\whitecard{Basis}{Star Trek.}%
 \whitecard{Böse}{Rassenhygiene.}%
 \whitecard{Basis}{Management-Lösungen mit Synergie-Effekt.}
 
 \whitecard{Basis}{RoboCop.}%
 \whitecard{Basis}{Sklaverei.}%
-\whitecard{FSK16}{Stephen Hawkings Sexgespräche.}
+\whitecard{FSK16}{Stephen Hawkings\newline Sexgespräche.}
 
-\whitecard{FSK16}{Ein Mann am Rande des Orgasmus.}%
+\whitecard{FSK16}{Ein Mann am Rande des\newline Orgasmus.}%
 \whitecard{Eklig}{Brennende Schisse.}%
-\whitecard{Basis}{Öffentliches Verspotten.}
+\whitecard{Basis}{Öffentliches\newline Verspotten.}
 
-\whitecard{Böse}{Die skalpierte Haut von weißen Männern.}%
-\whitecard{Basis}{Die krankhaft fettleibigen.}%
-\whitecard{Basis}{Activia.}
-
-\whitecard{Böse}{Die skalpierte Haut von weißen Männern.}%
-\whitecard{Basis}{Die krankhaft fettleibigen.}%
+\whitecard{Böse}{Skalps von\newline weißen\newline Männern.}%
+\whitecard{Basis}{Krankhaft\newline Fettleibige.}%
 \whitecard{Basis}{Activia\SymbReg.}
 
-\whitecard{Basis}{Kiefersperre}%
-\whitecard{Basis}{Genetisch manipulierte Kampf-Schildkröten mit Säure-Atem.}%
+\whitecard{Basis}{Kiefersperre.}%
+\whitecard{Basis}{Genetisch\newline manipulierte\newline Kampf-Schildkröten mit Säure-Atem.}%
 \whitecard{FSK16}{Feuchte Träume.}
 
-\whitecard{Basis}{Hip-Hop Juwelen.}%
-\whitecard{FSK18}{Ein Gewehr in die Luft abfeuern mit den Eiern tief in einer kreischenden Sau.}%
+\whitecard{Basis}{Hip-Hop\newline Juwelen.}%
+\whitecard{FSK18}{Ein Gewehr\newline in die Luft\newline abfeuern mit\newline den Eiern tief in einer\newline quiekenden Sau.}%
 \whitecard{FSK18}{Panda Sex.}
 
 \whitecard{Böse}{Nekrohpilie.}%
@@ -254,7 +247,7 @@
 
 \whitecard{Basis}{Mohammed (Geheiligt sei sein Name).}%
 \whitecard{Basis}{Mehrfache Stichwunden.}%
-\whitecard{FSK16}{Daniel Radcliffes appetitliches Arschloch.}
+\whitecard{FSK16}{Daniel\newline Radcliffes\newline appetitliches Arschloch.}
 
 \whitecard{Basis}{Ein rauchender Affe.}%
 \whitecard{Eklig}{Smegma.}%
@@ -262,23 +255,23 @@
 
 \whitecard{Basis}{Einen Schmollmund machen.}%
 \whitecard{Basis}{Das Verletzen unserer grundlegensten Menschenrechte.}%
-\whitecard{Basis}{Unerfassbare Blödheit.}
+\whitecard{Basis}{Unfassbare Blödheit.}
 
-\whitecard{Basis}{Sonnenschein und Regenbogen.}%
-\whitecard{FSK16}{Ihn rausholen.}%
+\whitecard{Basis}{Sonnenschein und\newline Regenbögen.}%
+\whitecard{FSK16}{"Ihn" rausholen.}%
 \whitecard{Basis}{Die Terroristen.}
 
-\whitecard{FSK18}{Eine Schildkröte, die dir in die Spitze deines Penis beisst.}%
-\whitecard{Böse}{Massenmord.}%
+\whitecard{FSK18}{Eine\newline Schildkröte, die einem in den\newline Penis beißt.}%
+\whitecard{Böse}{Vehikulärer Massenmord.}%
 \whitecard{Basis}{Die Eurokrise.}
 
-\whitecard{Basis}{Emotionen}%
-\whitecard{FSK16}{So wütend werden, dass du eine Erektion bekommst.}%
-\whitecard{Basis}{Gleichgeschlechtlicher Eiskunstlauf.}
+\whitecard{Basis}{Emotionen.}%
+\whitecard{FSK16}{So wütend werden, dass man\newline eine Erektion\newline bekommt.}%
+\whitecard{Basis}{Gleich-\newline geschlechtlicher\newline Eiskunstlauf.}
 
-\whitecard{Basis}{Ein M16 Sturmgewehr.}%
-\whitecard{Böse}{Menschenfleisch}%
-\whitecard{FSK18}{Inzest.} 
+\whitecard{Basis}{Ein M16\newline Sturmgewehr.}%
+\whitecard{Böse}{Menschenfleisch.}%
+\whitecard{FSK18}{Inzest.}
 
 \blackcard{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
 \blackcard{Basis}{}%
