Fixes and added .gitignore.

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -18,6 +18,7 @@
 
 \setlength{\baselineskip}{16pt}
 \def\SymbReg{\textsuperscript{\textregistered}}
+\setlength{\parskip}{0pt}
 
 \newcommand{\titleleft}{CARDS AGAINST HUMANITY}
 \newcommand{\underl}{\rule{2cm}{.5pt}}
@@ -274,23 +275,23 @@
 \whitecard{FSK18}{Inzest.}
 
 \blackcard{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
-\blackcard{Basis}{Warum tut mir alles weh?}%
-\blackcard{Basis}{Was hat nie verfehlt, eine Party zu beleben?}
+\blackcard{Basis}{Warum tut mir alles weh? \underl.}%
+\blackcard{Basis}{Was hat nie verfehlt,\newline eine Party\newline zu beleben? \underl.}
 
-\blackcard{Basis}{\underl + \underl = \underl.}%
-\blackcard{Drogen}{Was ist meine Anti-Droge?}%
+\blackcard{Basis}{\underl + \underl\newline = \underl.}%
+\blackcard{Drogen}{Was ist\newline meine\newline Anti-Droge? \underl.}%
 \blackcard{Basis}{Ja richtig, ich habe \underl getötet. Willst du wissen wie? \underl.}
 
-\blackcard{Drogen}{Als einen Acid-trip hatte, \underl wurde zu \underl.}%
-\blackcard{Basis}{Wenn ich ein Milliadär wäre, um wem zu gedenken würde ich eine Statue bauen?}%
-\blackcard{Basis}{Wenn ich König von Deutschland wär, würd ich das \underl Ministerium ins Leben rufen.}
+\blackcard{Drogen}{Als einen Acid-trip hatte, wurde \underl zu \underl.}%
+\blackcard{Basis}{Wenn ich ein\newline Milliadär wäre,\newline um wem zu gedenken würde ich eine Statue bauen? \underl.}%
+\blackcard{Basis}{Wenn ich König von Deutschland wär, würde ich das Ministerium für \underl ins Leben rufen.}
 
-\blackcard{Basic}{Dreamworks präsentiert "\underl die Geschichte von \underl."}%
-\blackcard{Basis}{Was ist die neue Modediät?}%
+\blackcard{Basic}{Dreamworks präsentiert: "\underl,\newline die Geschichte von \underl."}%
+\blackcard{Basis}{Was ist die neue Modediät? \underl.}%
 \blackcard{Basis}{Das Naturkundemuseum stellt jetzt auch \underl aus.}
 
-\blackcard{FSK18}{Fun Tip! Wenn dein Mann dich um einen Blowjob bittet, überrasche ihn stattdessen mit \underl.}%
-\blackcard{Basis}{Was denkt Angela Merkel gerade?}%
-\blackcard{Basis}{Auf was verzichtest du in der Fastenzeit?}
+\blackcard{FSK18}{Fun Tip! Wenn dein Mann dich um einen\newline Blowjob bittet,\newline überrasche ihn stattdessen mit \underl.}%
+\blackcard{Basis}{Was denkt\newline Angela Merkel\newline gerade?\newline \underl.}%
+\blackcard{Basis}{Auf was\newline verzichtest du\newline in der\newline Fastenzeit?\newline \underl.}
 
 \end{document}
