More white cards. 3rd card of page 15.

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -274,6 +274,90 @@
 \whitecard{Böse}{Menschenfleisch.}%
 \whitecard{FSK18}{Inzest.}
 
+\whitecard{Basis}{Ein schlechtes Mundwerk.}%
+\whitecard{Basis}{Fluglose Vögel.}%
+\whitecard{Basis}{Das Richtige tun.}
+
+\whitecard{Eklig}{Wenn man furzt und ein bisschen mit rauskommt.}%
+\whitecard{Basis}{Frohlocken.}%
+\whitecard{Basis}{Ein Arschloch zu Kindern sein.}
+
+\whitecard{Eklig}{Vollgeschissene Windeln.}%
+\whitecard{FSK16}{Oma nackt sehen.}%
+\whitecard{Basis}{Velociraptor Angriffe.}
+
+\whitecard{Basis}{Swooping}%
+\whitecard{Basis}{Eine Errektion verstecken.}%
+\whitecard{FSK16}{Vollständige Nacktheit.}
+
+\whitecard{Basis}{Eregierte Nippel.}%
+\whitecard{Basis}{Eine Backpfeife.}%
+\whitecard{Basis}{Angela Merkels Oberarme.}
+
+\whitecard{Basis}{Herpes.}%
+\whitecard{Böse}{Ein robuster Mongoloider.}%
+\whitecard{Basis}{Beidseitige Bereitschaft zum nuklearen Gegenschlag.}
+
+\whitecard{Basis}{Das jüngste Gericht.}%
+\whitecard{Basis}{Das Ende der Straße.}%
+\whitecard{Basis}{Stalin.}
+
+\whitecard{FSK16}{Laktation.}%
+\whitecard{Basis}{Hurricane Katrina.}%
+\whitecard{Basis}{Die wahre Bedeutung von Weihnachten.}
+
+\whitecard{Basis}{Selbsthass.}%
+\whitecard{Basis}{Gehirntumor.}%
+\whitecard{Böse}{Tote Babys.}
+
+\whitecard{Basis}{Hippiemusik.}%
+\whitecard{Basis}{Thermonucleare Detonation.}%
+\whitecard{Basis}{Gänse.}
+
+\whitecard{Basis}{Sido.}%
+\whitecard{Basis}{Gott.}%
+\whitecard{Basis}{Nerd-Spasti.}
+
+\whitecard{FSK16}{Erotische Harry Potter Literatur.}%
+\whitecard{Böse}{Kinder mit Arsch-Krebs.}%
+\whitecard{Basis}{Holzfäller Phantasien.}
+
+\whitecard{Basis}{Der amerikanische Traum.}%
+\whitecard{Basis}{Pubertät.}%
+\whitecard{Basis}{Süße, süße Vergeltug.}
+
+\whitecard{Basis}{Alten Leuten winken.}%
+\whitecard{Basis}{Die Wunder des Orients.}%
+\whitecard{Basis}{Oompa-Loompas.}
+
+\whitecard{Basis}{Athentische mexikanische Cuisine.}%
+\whitecard{Basis}{Pre-Teens.}%
+\whitecard{Basis}{Thomas the Train.}
+
+\whitecard{FSK18}{Fleshlight.}%
+\whitecard{FSK16}{Erektile Dysfunktion.}%
+\whitecard{Basis}{Ein Arsch mit Ohren sein.}
+
+\whitecard{Eklig}{Günther Jauchs weicher, beschissener Körper.}%
+\whitecard{Basis}{Saxophon Solos.}%
+\whitecard{Basis}{Landminen.}
+
+\whitecard{FSK18}{Kein Sperma mehr übrig haben.}%
+\whitecard{Basis}{Zeit für mich.}%
+\whitecard{Basis}{Nickelback.}
+
+\whitecard{Basis}{Selbstjustiz.}%
+\whitecard{Basis}{Bayern.}%
+\whitecard{Basis}{Opponierbare Daumen.}
+
+\whitecard{Basis}{Geister.}%
+\whitecard{Basis}{Alkoholismus.}%
+\whitecard{Basis}{Schlecht platzierte Holocaust Witze.}
+%
+% Here comes the black cards
+%
+
+
 \blackcard{Basis}{Ich habe \underl \newline nie wirklich verstanden, bis \newline  ich auf \underl \newline  gestoßen bin.}%
 \blackcard{Basis}{Warum tut mir alles weh? \underl.}%
 \blackcard{Basis}{Was hat nie verfehlt,\newline eine Party\newline zu beleben? \underl.}
