More whtie cards. Page 19.

--- a/cards-against-humanity.tex
+++ b/cards-against-humanity.tex
@@ -352,7 +352,103 @@
 
 \whitecard{Basis}{Geister.}%
 \whitecard{Basis}{Alkoholismus.}%
-\whitecard{Basis}{Schlecht platzierte Holocaust Witze.}
+\whitecard{Böse}{Schlechte Holocaust-Witze.}
+
+\whitecard{Basis}{Unangemessenes Jodeln.}%
+\whitecard{Basis}{Kriegsbedingte Amputationen.}%
+\whitecard{Basis}{Exakt was du vermuten würdest.}
+
+\whitecard{Basis}{Zeitreisen Paradox.}%
+\whitecard{Basis}{AXE Deo.}%
+\whitecard{Basis}{Das Leben eines Piraten.}
+
+\whitecard{Basis}{"Ich liebe dich" sagen.}%
+\whitecard{FSK16}{Eine erotische schwarze Frau.}%
+\whitecard{Basis}{Ein gottverdammter Zauberer sein.}
+
+\whitecard{Basis}{Ein törichter Mord.}%
+\whitecard{Basis}{Ein Falke mit einer Mütze auf dem Kopf.}%
+\whitecard{Eklig}{Furzen und dann weglaufen.}
+
+\whitecard{Basis}{Ein chinesisches Gymnastikteam.}%
+\whitecard{Basis}{Hefe.}%
+\whitecard{Basis}{Bifi\SymbReg.}
+
+\whitecard{Basis}{An Dingen lecken um sie zu beanspruchen.}%
+\whitecard{Basis}{Wikinger.}%
+\whitecard{Basis}{Der Ahoi-Brause Mann.}
+
+\whitecard{Basis}{Heißer Käse.}%
+\whitecard{Basis}{Nicolas Cage.}%
+\whitecard{FSK16}{Ein kaputtes Kondom.}
+
+\whitecard{Basis}{Der unausweichliche Hitzetod des Universums.}%
+\whitecard{Basis}{CDU-Wähler.}%
+\whitecard{Basis}{William Shatner.}
+
+\whitecard{FSK18}{Tentakel Pornos.}%
+\whitecard{Basis}{Lady Gaga.}%
+\whitecard{FSK18}{Gloryholes.}
+
+\whitecard{Basis}{Vaterkomplexe.}%
+\whitecard{Basis}{Ein Pantomime der ein Herzanfall hat.}%
+\whitecard{Basis}{Spießer.}
+
+\whitecard{Basis}{Ein Leben voller Traurigkeit.}%
+\whitecard{Basis}{Ein geschmackvolles Dekolleté.}%
+\whitecard{Basis}{In Problemen zu ertrinken.}
+
+\whitecard{Basis}{Nazis.}%
+\whitecard{Böse}{Ein Kühlschrank voller Organe.}%
+\whitecard{Basis}{110\% geben}
+
+\whitecard{FSK18}{Anal-Sex.}%
+\whitecard{Eklig}{Ein Kind festhalten und es anfurzen.}%
+\whitecard{Basis}{Eine homoerotische Volleyball-Montage.}
+
+\whitecard{Basis}{Welpen!}%
+\whitecard{Basis}{Natürliche männliche Verbesserungen.}%
+\whitecard{Basis}{Schwarze.}
+
+\whitecard{Basis}{Ein Kerzenhalter auf deine Feinde fallen lassen und das Seil hochklettern.}%
+\whitecard{Basis}{Suppe, die zu heiß ist.}%
+\whitecard{FSK18}{Sex mit Patrick Steward.}
+
+\whitecard{Basis}{Hormon-Injektionen.}%
+\whitecard{Basis}{Die Hose runterlassen.}%
+\whitecard{Basis}{Der Urknall.}
+
+\whitecard{Basis}{Den Antichrist gebären.}%
+\whitecard{Basis}{Darke und mysteriöse Mächte außerhalb deiner Kontrolle.}%
+\whitecard{FSK18}{Oralsex nicht zu erwiedern.}
+
+\whitecard{Basis}{Heiße Menschen.}%
+\whitecard{FSK16}{Vorhaut.}%
+\whitecard{Basis}{Arschlose Burschen.}
+
+\whitecard{Basis}{Das Wunder der Geburt.}%
+\whitecard{Basis}{Warten bis nach der Hochzeit.}%
+\whitecard{Eklig}{Zwei Kleinwüchsige, die in einen Eimer scheissen.}
+
+\whitecard{FSK18}{Ein schlechter Handjob.}%
+\whitecard{Basis}{In den Special Olympics schummeln.}%
+\whitecard{Basis}{Ein Glassdach.}
+
+\whitecard{Basis}{Miley Cyrus mit 55.}%
+\whitecard{Basis}{Unser erster Chimpansen-Kanzler.}%
+\whitecard{Basis}{Anfangen zu Singen und zu Tanzen.}
+
+\whitecard{Eklig}{Ein Schwamm voller Katzenpisse.}%
+\whitecard{Basis}{U-Bahn.}%
+\whitecard{Basis}{Martin Luther King.}
+
+\whitecard{Basis}{Extrem enge Hosen.}%
+\whitecard{Basis}{Halb nackt auf dem Parkplatz einem McDonalds-Parkplatz aufwachen.}%
+\whitecard{Basis}{Der kalte, erfrischende Geschmack einer Pepsi\SymbReg}
+
+\whitecard{Basis}{Die priviligierte Oberklasse.}%
+\whitecard{Basis}{Hoffnung.}%
+\whitecard{Basis}{Sein Shirt ausziehen.}
 %
 % Here comes the black cards
 %
